--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+body {
+  height: 100vh;
+  width: 100vw;
+  background: black;
+}
+p {
+  color: white;
+}
